# IP7

./: .gitignore  .ipv7_state.json  Dockerfile  README.md  docker-compose.yml  ipv7.bat  pyproject.toml  requirements.txt  setup.ps1  setup.sh
.github/workflows/: ci.yml
docs/: api.md  cli.md  comparison.md  ipv7_comparison.md  tarjetasdered.md
gui/: app.js  index.html  server.py  style.css
ipv7/: __init__.py  ai_routing.py  cli.py  compression.py  discovery.py  exceptions.py  icmpv7.py  ipv7_core.py  ipv7_header.py  packet_fragmenter.py  persistence.py  quantum_layer.py  routing_table.py  smart_security.py  transmitter.py  utils.py
ipv7.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_ipv7.py
